# the-first-project-ml

./: pyproject.toml
the_first_project_ml/: cat_vs_dog.py  main.py
