[tool.poetry]
name = "the-first-project-ml"
version = "0.1.0"
description = ""
authors = ["ViniciusB <vinicius.barbosa08@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.2.1"
pandas = "^2.2.3"
scikit-learn = "^1.6.0"
matplotlib = "^3.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
